[package]
name = "recon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
proptest = "1.1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.6"
sise = "0.8.0"
xs233 = "0.3"

[features]
avx2 = ["xs233/avx2"]
sse41 = ["xs233/sse41"]
pclmul = ["xs233/pclmul"]
