[package]
name = "unionize"
version = "0.2.0"
edition = "2021"
authors = [ "Jan Winkelmann (keks)" ]
description = "A variant of Range-based Set Reconciliation"
readme = "README.md"
repository = "https://github.com/keks/unionize"
keywords = ["distributed", "decentralized", "protocol", "gossip", "set-reconciliation"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
procinfo = "0.4.2"
proptest = "1.1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.6"
sise = "0.8.0"
xs233 = "0.3"

[features]
avx2 = ["xs233/avx2"]
sse41 = ["xs233/sse41"]
pclmul = ["xs233/pclmul"]
default = ["sse41"]
